Run scripts directly without rocket loader type

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Google Tag Manager -->
-    <script type="413c4efd1cc530fd21a8c5b4-text/javascript">
+    <script type="text/javascript">
         (function(w, d, s, l, i) {
             w[l] = w[l] || [];
             w[l].push({
@@ -138,7 +138,7 @@
         }
     </style>
 
-    <script type="413c4efd1cc530fd21a8c5b4-text/javascript">
+    <script type="text/javascript">
         // 1. String.prototype.trim polyfill
         if (!"".trim) String.prototype.trim = function() {
             return this.replace(/^[\s]+|[\s]+$/g, '');
@@ -462,8 +462,8 @@
             <img class="spinner" src="static/img/spinner.svg">
         </div>
     </div>
-    <script src="static/bundle20201224.js" type="413c4efd1cc530fd21a8c5b4-text/javascript"></script>
-    <script type="413c4efd1cc530fd21a8c5b4-text/javascript">
+    <script src="static/bundle20201224.js" type="text/javascript"></script>
+    <script type="text/javascript">
         function webAudioCtxRusume() {
             Howler.ctx.resume().then(() => {
                 console.log('Playback resumed successfully');
